src/eks/poc-test/poc-test-fortio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: load-test-demo
  namespace: load-test
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: load-test-demo
      namespace: load-test
  template:
    metadata:
      labels:
        app: load-test-demo
        namespace: load-test
    spec:
      containers:
        - name: fortio
          image: fortio/fortio:latest
          args:
            - load
            - -c=8
            - -qps=20
            - -t=15s
            - http://poc-demo.load-test.svc.cluster.local:7001/
          resources:
            requests:
              memory: 32Mi
              cpu: 10m
